--- a/src/components/molecules/month/style.module.css
+++ b/src/components/molecules/month/style.module.css
@@ -1,27 +1,32 @@
 .month {
-    width: 150px;
+    width: 147.5px;
     background-color: #fafafa;
     color: #666;
     border: 1px solid #e1e1e1;
     font-size: 10px;
     border-radius: 8px;
     cursor: pointer;
-    justify-content: space-between;
-    transition:all 0.4s ease;
-}
-.month:hover {
-    transform: scale(1.05); 
+    transition: all 0.4s ease;
 }
 
+.month:hover {
+    transform: scale(1.05);
+}
 
 .days {
-    padding:10px;
+    padding: 5px;
     display: inline-grid;
     grid-template-columns: repeat(7, minmax(20px, auto));
     grid-template-rows: repeat(6, minmax(20px, auto));
+    width:137.5px;
+
 }
 
 h2 {
     margin: 0px;
-    margin-left:10px;
+    margin-top:5px;
+    margin-left: 10px;
 }
+.highlight {
+    background-color: #ffff99; /* 노란색 하이라이트 */
+  }
