--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -1,6 +1,6 @@
 .App {
-  width: 100%;
-  max-width: 690px;
+  min-width: 940px;
+  max-width: auto;
   height: auto;
   margin: 20px;
   padding: 30px;
@@ -8,6 +8,7 @@
   border-radius: 16px;
   box-shadow: 0px 8px 32px rgba(0, 0, 0, 0.3);
   box-sizing: border-box;
+  display:flex;
 }
 
 .App-logo {
@@ -18,9 +19,9 @@
 body {
   background-image: linear-gradient(45deg, #1bcddaf3, #9213d7);
   color: #1a1a1a;
-  line-height: 1.6;
   min-height: 100vh;
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
 }
@@ -36,14 +37,6 @@ body {
     height: 0px;
   }
 }
-
-h1 {
-  margin-top: 0px;
-  font-size: 40px;
-  margin-bottom: 0px;;
-  text-align: left;
-}
-
 .App-link {
   color: #61dafb;
 }
@@ -70,7 +63,10 @@ h1 {
   border-color: azure;
   margin-bottom: 10px;
 }
-
+header {
+  display:flex;
+  justify-content: space-between;
+}
 main {
   display: grid;
   background-color: white;
